--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # 测试环境
-spring.datasource.url=jdbc:mysql://rm-bp150tq91vm9u7n3ho.mysql.rds.aliyuncs.com:3306/recommendation_dev?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=wyunadmin
-spring.datasource.password=TSLKtPpP2nD3EV
+spring.datasource.url=jdbc:mysql://120.27.217.130:3306/lj-userportrait?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=airport
+spring.datasource.password=fs12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-elasticsearch.server.uri=http://116.62.184.103:9200
+elasticsearch.server.uri=http://192.168.1.127:9200
 
 # 正式环境
 #spring.datasource.url=jdbc:mysql://rm-bp1io2x37e97r2mzuo.mysql.rds.aliyuncs.com:3306/recommentation_dev?useUnicode=true&characterEncoding=utf-8
